# Financial-Terminal

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml  ci.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/db/migrations/: 001_initial.sql  002_watchlist.sql
backend/internal/api/: handlers.go
backend/internal/cache/: redis.go
backend/internal/finnhub/: client.go
backend/internal/middleware/: middleware.go
backend/internal/models/: models.go
backend/internal/repository/: timescaledb.go
backend/internal/websocket/: hub.go
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/ChartView/: index.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/components/NewsPanel/: index.tsx
frontend/src/components/StockQuote/: index.tsx
frontend/src/components/Watchlist/: index.tsx
frontend/src/hooks/: useCandles.ts  useQuote.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts  finnhub.ts  websocket.ts
frontend/src/store/: candles.ts  index.ts  quotes.ts
frontend/src/types/: index.ts
